Edited wiki page through web user interface.

--- a/wiki/Translation_PT_PT.wiki
+++ b/wiki/Translation_PT_PT.wiki
@@ -1,4 +1,4 @@
-#summary The messages translated int Portuguese (Portugal)
+#summary The messages translated into Portuguese (Portugal)
 
 === Introduction ===
 
