--- a/wiki/Translation_sv.wiki
+++ b/wiki/Translation_sv.wiki
@@ -10,5 +10,5 @@ Just replace the initial script content from the warning.js file to:
 {{{
 var msg1 = "Vet du om att din version av Internet Explorer är föråldrad?";
 var msg2 = "För att få störst behållning av denna webbsida rekommenderar vi att du uppgraderar till en nyare webbläsare. Här nedanför finns en lista över de mest populära webbläsarna.";
-var msg3 = "Klicka på en av ikonerna för att förflyttas till respektive nerladdningssida.";
+var msg3 = "Klicka på en av ikonerna för att förflyttas till respektive nedladdningssida.";
 }}}
