--- a/wiki/Translation_pt.wiki
+++ b/wiki/Translation_pt.wiki
@@ -9,6 +9,6 @@ Just replace the initial script content from the `warning.js` file to:
 
 {{{
 var msg1 = "Sabia que o seu Internet Explorer está desactualizado?";
-var msg2 = "Para unsufrir da melhor experiência de navegação na nossa página web recomendamos que actualize para uma nova versão ou para outro navegador web. Uma lista dos navegadores web mais populares encontra-se mais abaixo.";
+var msg2 = "Para usufruir da melhor experiência de navegação na nossa página web recomendamos que actualize para uma nova versão ou para outro navegador web. Uma lista dos navegadores web mais populares encontra-se mais abaixo.";
 var msg3 = "Carregue nas imagens para ir à página de download";
 }}}
