updated to suggested better translation

--- a/wiki/Translation_nl.wiki
+++ b/wiki/Translation_nl.wiki
@@ -8,7 +8,7 @@ Just replace the initial script content from the warning.js file to:
 === Translation ===
 
 {{{
-var msg1 = "Wist u dat uw Internet Explorer verouderd is?";
-var msg2 = "Om de best mogelijke ervaring te krijgen tijdens het gebruiken van onze website, raden we u aan om een nieuwere versie of een andere browser te gebruiken.";
+var msg1 = "Bent u er van op de hoogte dat uw versie van Internet Explorer verouderd is?";
+var msg2 = "Voor de beste gebruikservaring van onze website, raden we u aan om een nieuwere of andere browser te gebruiken.";
 var msg3 = "Klik op één van de icoontjes om naar de download pagina te gaan."; 
 }}}
