--- a/wiki/Translation_es_ar.wiki
+++ b/wiki/Translation_es_ar.wiki
@@ -9,6 +9,6 @@ Just replace the initial script content from the warning.js file to:
 
 {{{
 var msg1 = "¿Sabía usted que su Internet Explorer está desactualizado?";
-var msg2 = var msg2 = "Para lograr la mejor experiencia posible usando nuestro sitio web nosotros recomenamos que usted actualice a una nueva versión de Internet Explorer o use otro navegador web. Una lista de los navegadores web más populares pueden ser encontrada debajo.";
+var msg2 = "Para lograr la mejor experiencia posible usando nuestro sitio web nosotros recomenamos que usted actualice a una nueva versión de Internet Explorer o use otro navegador web. Una lista de los navegadores web más populares pueden ser encontrada debajo.";
 var msg3 = "Solo haga click en los íconos para ir a la pagina de descarga";
 }}}
