--- a/wiki/Translation_es_ar.wiki
+++ b/wiki/Translation_es_ar.wiki
@@ -12,3 +12,11 @@ var msg1 = "¿Sabía usted que su Internet Explorer está desactualizado?";
 var msg2 = "Para lograr la mejor experiencia posible usando nuestro sitio web nosotros recomenamos que usted actualice a una nueva versión de Internet Explorer o use otro navegador web. Una lista de los navegadores web más populares pueden ser encontrada debajo.";
 var msg3 = "Solo haga click en los íconos para ir a la pagina de descarga";
 }}}
+
+or
+
+{{{
+var msg1 = "¿Sabía usted que su Internet Explorer está desactualizado?";
+var msg2 = "Para lograr la mejor experiencia posible usando nuestro sitio web, le recomendamos actualizar a una nueva versión de Internet Explorer o usar otro navegador web. Le entregamos una lista de los navegadores web más populares a continuación.";
+var msg3 = "Haga click en los íconos para obtener el vínculo de descarga.";
+}}}
