--- a/wiki/Translation_ja_JP.wiki
+++ b/wiki/Translation_ja_JP.wiki
@@ -8,10 +8,7 @@ Just replace the initial script content from the warning.js file to:
 === Translation ===
 
 {{{
-var msg1 = "あなたの Internet Explorer ブラウザーは流行遅れのが知っていま
-すか？";
-var msg2 = "新しいバージョンの Internet Explorer を更新やほかのブラウザー
-を利用しいただけます。下記は今人気のブラウザーです。";
-var msg3 = "画像をクリックすると、それぞれのダウンロードページへ移動し
-ます。";
+var msg1 = "あなたの Internet Explorer ブラウザーは流行遅れのが知っていますか？";
+var msg2 = "新しいバージョンの Internet Explorer を更新やほかのブラウザーを利用しいただけます。下記は今人気のブラウザーです。";
+var msg3 = "画像をクリックすると、それぞれのダウンロードページへ移動します。";
 }}}
