--- a/wiki/Translation_th.wiki
+++ b/wiki/Translation_th.wiki
@@ -12,4 +12,5 @@ Just replace the initial script content from the warning.js file to:
 var msg1 = "รู้ไหม? Internet Explorer ของคุณล้าสมัยแล้ว";
 var msg2 = "เพื่อประสบการณ์ที่ดีที่สุด ในการใช้งานเว็บไซต์ของเรา เราขอแนะนำให้คุณปรับมันเป็น
 รุ่นใหม่ หรือเปลี่ยนไปใช้เบราว์เซอร์ตัวอื่น ด้านล่างคือเว็บเบราว์เซอร์จำนวนหนึ่งที่ได้รับความนิยมมากที่สุด";
-var msg3 = "คลิกที่ไอคอนเพื่อไปยังหน้าดาวน์โหลด";}}}
+var msg3 = "คลิกที่ไอคอนเพื่อไปยังหน้าดาวน์โหลด";
+}}}
