updated polish translation

--- a/wiki/Translation_pl.wiki
+++ b/wiki/Translation_pl.wiki
@@ -8,7 +8,8 @@ Just replace the initial script content from the `warning.js` file to:
 === Translation ===
 
 {{{
-var msg1 = "Czy wiesz, że Twoja wersja Internet Explorera wymaga aktualizacji?";
-var msg2 = "Aby uzyskać możliwie jak największe korzyści przeglądając naszą stronę zalecamy abyś zaaktualizował swoją przeglądarkę lub wybrał inną. Poniżej znajduje się lista najbardziej popularnych przeglądarek internetowych.";
-var msg3 = "Poprostu kliknij w ikonę poniżej aby przejść do strony pobierania.";
+var msg1 = "Czy wiesz, że Twoja wersja przeglądarki Internet Explorer wymaga aktualizacji?";
+var msg2 = "Zaktualizuj swoją przeglądarkę lub wybierz inną by w pełni wykorzystać funkcjonalność naszej strony. Poniżej znajduje się lista najpopularniejszych przeglądarek internetowych.";
+var msg3 = "Kliknij jedną z ikon by przejść do strony pobierania.";
+
 }}}
